<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SD Controller</string>
    <string name="discovery">Discovery</string>
    <string name="identity">Identity</string>
    <string name="services">Services</string>
    <string name="service_image">Service Image</string>
    <string name="service_name">Name</string>
    <string name="service_type">Type</string>
    <string name="service_location">Location</string>
    <string name="server_address">Address</string>
    <string name="query_loading">The invoker is being queried.</string>
    <string name="loading">Loading…</string>
    <string name="parameters">Parameters</string>
    <string name="not_available">N/A</string>
    <string name="generate_key">Generate Key</string>
    <string name="import_key">Import Key</string>
    <string name="public_key">Public Key</string>
    <string name="key_seed">Key Seed</string>
    <string name="paste_your_key_seed">Please paste in your key seed</string>
    <string name="invalid_seed">Invalid Seed</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="software_notices">Software notices</string>
    <string name="invoke">Invoke</string>
    <string name="select">Select</string>
    <string name="service_handler_not_implemented">Service type not implemented</string>
    <string name="favorites">Favorites</string>
    <string name="accept">Accept</string>
    <string name="title_choose_server_name">Choose server name</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="add_favorite_button">Add favorite button</string>
    <string name="service">Service</string>
    <string name="title_add_favorite">Add favorite</string>
    <string name="server_name">Server name</string>
    <string name="invalid_key">Invalid public key</string>
    <string name="invalid_address">Invalid address</string>
    <string name="service_was_invoked">The service has been invoked</string>
    <string name="environment">Environment</string>
    <string name="executable">Executable</string>
    <string name="parameter">Parameter</string>
    <string name="value">Value</string>
    <string name="title_add_parameter">Add parameter</string>
    <string name="title_add_environment">Add environment variable</string>
    <string name="environment_value">Environment value</string>
    <string name="environment_variable">Environment variable</string>
    <string name="toast_executable_not_set">Executable is not set</string>
    <string name="capability_request">Accept request for service %1$s from entity %2$s for invoker %3$s with parameters %4$s?</string>
    <string name="button_accept">Accept</string>
    <string name="button_reject">Reject</string>
    <string name="label_requester">Requester</string>
    <string name="label_address">Address</string>
    <string name="label_invoker">Invoker</string>
    <string name="label_service">Service</string>
    <string name="button_start">Start</string>
    <string name="no_plugin_for_type">No plugin for service type %s</string>
</resources>
