<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".invoke.InvokeActivity">
    <ImageView
            android:id="@+id/service_image"
            android:src="@drawable/service_unknown"
            android:contentDescription="@string/service_image"
            android:layout_gravity="center"
            android:layout_width="72dp"
            android:layout_height="72dp"/>

    <TableLayout
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableRow>
            <TextView
                    android:text="@string/service_name"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"/>

            <TextView
                    tools:text="Wonderful display service"
                    android:id="@+id/service_name"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:text="@string/service_type"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"/>

            <TextView
                    tools:text="xpra"
                    android:id="@+id/service_type"
                    android:text="@string/not_available"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:text="@string/server_address"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"/>

            <TextView
                    tools:text="127.0.0.1:12345"
                    android:id="@+id/server_address"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:text="@string/service_location"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"/>

            <TextView
                    tools:text="Somewhere in space"
                    android:id="@+id/service_location"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>

    <FrameLayout
            android:id="@+id/plugin_view"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/invoke"
            android:onClick="onInvokeClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
