<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".query.ServiceDetailActivity">

    <TextView
            android:text="@string/service"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/service_image"
                android:contentDescription="@string/service_image"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow>
                <TextView
                        android:text="@string/server_key"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/server_key"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:text="@string/server_address"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/server_address"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:text="@string/service_port"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/service_port"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:text="@string/service_name"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/service_name"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:text="@string/service_type"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/service_type"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:text="@string/service_subtype"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/service_subtype"
                        android:text="@string/not_available"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:text="@string/service_location"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/service_location"
                        android:text="@string/not_available"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TextView
            android:text="@string/parameters"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ListView
            android:id="@+id/service_parameter_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>
