<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="im.pks.sd.controller.identity.IdentityActivity">

    <TextView
            android:text="@string/public_key"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/public_key"
            android:textIsSelectable="true"
            android:typeface="monospace"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/key_seed"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/key_seed"
            android:textIsSelectable="true"
            android:typeface="monospace"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="onImportClicked"
                android:text="@string/import_key"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="onGenerateClicked"
                android:text="@string/generate_key"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
