<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/executable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/edit_executable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
            style="@style/subheader"
            android:text="@string/parameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <ListView
                android:id="@+id/parameters_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        <android.support.design.widget.FloatingActionButton
                app:backgroundTint="@color/accent"
                android:id="@+id/button_add_parameter"
                android:src="@android:drawable/ic_input_add"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_gravity="bottom|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </FrameLayout>

    <TextView
            style="@style/subheader"
            android:text="@string/environment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <ListView
                android:id="@+id/environments_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        <android.support.design.widget.FloatingActionButton
                app:backgroundTint="@color/accent"
                android:id="@+id/button_add_environment"
                android:src="@android:drawable/ic_input_add"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_gravity="bottom|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </FrameLayout>

    <Button
            android:id="@+id/button_invoke"
            android:text="@string/invoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
