<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:padding="8dp"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TableRow
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">
                    <TextView
                            android:text="@string/label_requester"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <Space android:layout_width="@dimen/activity_vertical_margin"/>
                    <TextView
                            android:id="@+id/text_view_requester"
                            android:typeface="monospace"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">
                    <TextView
                            android:text="@string/label_service"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <Space android:layout_width="@dimen/activity_vertical_margin"/>
                    <TextView
                            android:id="@+id/text_view_service"
                            android:typeface="monospace"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">
                    <TextView
                            android:text="@string/label_address"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <Space android:layout_width="@dimen/activity_vertical_margin"/>
                    <TextView
                            android:id="@+id/text_view_address"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                </TableRow>

            </TableLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/text_view_received"
                        android:layout_gravity="start|bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Space
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                <Button
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:id="@+id/button_accept"
                        android:text="@string/button_accept"
                        android:layout_gravity="bottom|end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:id="@+id/button_reject"
                        android:text="@string/button_reject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
